[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/MobileControl.gd" type="Script" id=1]
[ext_resource path="res://textures/gui_controller/jump.png" type="Texture" id=2]
[ext_resource path="res://textures/gui_controller/run.png" type="Texture" id=3]
[ext_resource path="res://textures/gui_controller/bg_analog.png" type="Texture" id=4]
[ext_resource path="res://textures/gui_controller/core_analog.png" type="Texture" id=5]

[node name="MobileControl" type="Node2D"]

script/script = ExtResource( 1 )

[node name="action" type="Node2D" parent="."]

[node name="jump" type="TouchScreenButton" parent="action"]

transform/pos = Vector2( 1080, 380 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="run" type="TouchScreenButton" parent="action"]

transform/pos = Vector2( 1080, 540 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 25.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bg_analog" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 430.0
margin/right = 282.0
margin/bottom = 622.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="analog_core" type="TextureButton" parent="bg_analog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="button_down" from="bg_analog/analog_core" to="." method="_on_analog_core_button_down"]

[connection signal="button_up" from="bg_analog/analog_core" to="." method="_on_analog_core_button_up"]


